--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
 .App {
-  text-align: center;
-}
+  box-sizing: border-box;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  width: 100vw;
+  height: 100vh;
+  
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-template-areas: "main sidebar";
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar {
+  grid-area: sidebar;
+
+  width: 20%;
+  min-width: 200px;
+  max-width: 400px;
+  min-height: 300px; 
+  height: 100%;
+
+  background-color: #666972;
+  border-left: solid #7a92c2 3px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-content {
+  grid-area: main;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #282c34;
 }
+
