--- a/src/App.css
+++ b/src/App.css
@@ -7,18 +7,12 @@
   height: 100vh;
   
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr max(300px,20%);
   grid-template-areas: "main sidebar";
 }
 
 .sidebar {
   grid-area: sidebar;
-
-  width: 20%;
-  min-width: 200px;
-  max-width: 400px;
-  min-height: 300px; 
-  height: 100%;
 
   background-color: #666972;
   border-left: solid #7a92c2 3px;
@@ -26,9 +20,6 @@
 
 .main-content {
   grid-area: main;
-
-  width: 100%;
-  height: 100%;
 
   background-color: #282c34;
 }
